смотрим решающее дерево без подбора параметров

--- a/case_bank.ipynb
+++ b/case_bank.ipynb
@@ -1501,6 +1501,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "По алгоритму 'Решающее дерево' F1-мера лучшей модели = 0.4497816593886463\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(features_train, target_train)\n",
+    "predicted_tree_valid = model.predict(features_valid)\n",
+    "result_tree = f1_score(target_valid, predicted_tree_valid)\n",
+    "\n",
+    "print(\"По алгоритму 'Решающее дерево' F1-мера лучшей модели =\", result_tree)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
