--- a/case_bank.ipynb
+++ b/case_bank.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "Дополнительно измеряйте *AUC-ROC*, сравнивайте её значение с *F1*-мерой.\n",
     "\n",
-    "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)"
+    "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)\n",
+    "\n",
+    "Pепозиторий с данными https://github.com/eugeniavd/bank_repo "
    ]
   },
   {
