добавляю ссылку на репозиторий

--- a/case_bank.ipynb
+++ b/case_bank.ipynb
@@ -29,9 +29,29 @@
     "\n",
     "Дополнительно измеряйте *AUC-ROC*, сравнивайте её значение с *F1*-мерой.\n",
     "\n",
-    "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)\n",
-    "\n",
-    "Pепозиторий с данными https://github.com/eugeniavd/bank_repo "
+    "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ссылка на репозиторий: https://github.com/eugeniavd/bank_repo'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo_url = \"https://github.com/eugeniavd/bank_repo\"\n",
+    "repo_link = f\"Ссылка на репозиторий: {repo_url}\"\n",
+    "repo_link"
    ]
   },
   {
